--- a/flutter-srvcs/aaaa/android/app/src/main/AndroidManifest.xml
+++ b/flutter-srvcs/aaaa/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@mipmap/ic_launcher">
 
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDE2TxRO0S4sP4SeFMeJjPpoud2J7a02nc"/>
+            android:value=""/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
